--- a/src/EventSourcing.Tests/EventSourcing.Tests.csproj
+++ b/src/EventSourcing.Tests/EventSourcing.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Marten" Version="5.11.0" />
     <PackageReference Include="Marten.AspNetCore" Version="5.11.0" />
     <PackageReference Include="Marten.AspNetIdentity" Version="1.0.33" />
+    <PackageReference Include="NetArchTest.Rules" Version="1.3.2" />
     <PackageReference Include="Shouldly" Version="4.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
