--- a/src/EventSourcing.Api/EventSourcing.Api.csproj
+++ b/src/EventSourcing.Api/EventSourcing.Api.csproj
@@ -13,6 +13,7 @@
 	  <PackageReference Include="Marten.AspNetCore" Version="5.11.0" />
 	  <PackageReference Include="MediatR" Version="11.0.0" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
