--- a/src/EventSourcing.Tests/EventSourcing.Tests.csproj
+++ b/src/EventSourcing.Tests/EventSourcing.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Marten" Version="5.11.0" />
     <PackageReference Include="Marten.AspNetCore" Version="5.11.0" />
     <PackageReference Include="Marten.AspNetIdentity" Version="1.0.33" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.11" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NetArchTest.Rules" Version="1.3.2" />
